[package]
name = "instant"
version = "0.1.0"
authors = ["kkragoth"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "llvm"
path = "src/main_llvm.rs"

[[bin]]
name = "jvm"
path = "src/main_jvm.rs"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"